cc: Fix property tree animation sync bug

Property trees animation sync at commit depends on the value of
is_currently_animating value of a property tree node on the main thread.
So, we need to do this sync before calling AnimationHost::PushProperties
as AnimationHost::PushProperties can delete animations and change the
is_currently_animating value.

BUG=620978
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2090793002
Cr-Commit-Position: refs/heads/master@{#402011}

Former-commit-id: 94bcfedec292cc72e7b98cea38da392fbf1dc18a